[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ya360"
description = "Утилита командной строки для Yandex 360"
readme = "README.md"
requires-python = ">=3.6.9"
keywords = ["yandex", "yandex360"]
license = {text = "MIT"}
classifiers = [
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Environment :: Console",
    "Intended Audience :: System Administrators"
]
dependencies = [
    "yandex-oauth >= 1.1.2",
    "yandex-360 >= 2.2.1",
]
authors = [
    {name = "Купцов Игорь", email = "ya360@uh.net.ru"},
]
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "ya360/_version.py"

[tool.setuptools.dynamic]
version = {attr = "ya360/_version.__version__"}

[project.urls]
"Homepage" = "https://ya360.uh.net.ru"
"Bug Tracker" = "https://github.com/imercury13/ya360/issues"
"Documentation" = "https://ya360.readthedocs.io/"
"Download" = "https://github.com/imercury13/ya360"


[project.scripts]
ya360 = "ya360.cmd:start"
